--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    
+    <button class="buttons left_button">Click Me!</button>
+    <button class="buttons right_button">No, Click Me!</button>
+  
   </body>
 </html>
