Use grouping selector

--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     
-    <button class="buttons left_button">Click Me!</button>
-    <button class="buttons right_button">No, Click Me!</button>
+    <button class="left_button">Click Me!</button>
+    <button class="right_button">No, Click Me!</button>
   
   </body>
 </html>
